Fix custom field alignment for Woo Carrier Agents

--- a/sass/compat/plugins/woo-carrier-agents/_checkout-shipping-methods.scss
+++ b/sass/compat/plugins/woo-carrier-agents/_checkout-shipping-methods.scss
@@ -5,3 +5,7 @@
 .fc-wrapper ul#shipping_method .shipping-method__option input[type="radio"]:checked + .shipping-method__option-label .carrier-agents {
 	display: block !important; // Needed to override plugin styles
 }
+
+.fc-wrapper ul#shipping_method .shipping-method__option .woo-carrier-agents-shipping-fields:after {
+	@include clearfix();
+}
